overflow fix on bigger screens

--- a/my-portfolio/components/Brand/Products/ProductsContainer.module.scss
+++ b/my-portfolio/components/Brand/Products/ProductsContainer.module.scss
@@ -12,3 +12,8 @@
     }
   }
 }
+@media only screen and (min-width: 992px) {
+  .productContainer {
+    overflow: hidden;
+  }
+}
